[gd_scene load_steps=4 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Boxes/box3x3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Item.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 45, 30 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Inventory"]
texture = ExtResource( 2 )

[node name="Item" parent="." instance=ExtResource( 3 )]
position = Vector2( 107.451, 103.387 )
gravity_vec = Vector2( 0, 0 )
[connection signal="drop_item" from="Item" to="Inventory" method="_on_Item_drop_item"]
[connection signal="pickup_item" from="Item" to="Inventory" method="_on_Item_pickup_item"]

[editable path="Item"]
